Add a test-only dependency on logback to memory-core
Memory-core tests utilize logback.
Note that this can't be added to the source module-info.java
without adding an unnecessary dependency. It also can't be
added to the test module-info.java without breaking the main
module since the tests use the same packages.